menu issues, post sidebar, icons spacing

--- a/wp-content/themes/rai.com/src/assets/sass/4-sections/_header.sass
+++ b/wp-content/themes/rai.com/src/assets/sass/4-sections/_header.sass
@@ -94,6 +94,9 @@
         li
           a
             line-height: 26px
+  ul.language.menu.vertical.submenu.is-dropdown-submenu.first-sub
+    left: auto;
+    right: 0px;
   .quote
     padding-top: 10em
     max-width: 620px
@@ -107,7 +110,6 @@
       font-weight: 900
       text-transform: uppercase
       line-height: 80px
-      margin-bottom: 50px
       .sub-title
         font-size: 26px
         font-weight: 700
