--- a/wp-content/themes/rai.com/src/assets/sass/4-sections/external/rules.sass
+++ b/wp-content/themes/rai.com/src/assets/sass/4-sections/external/rules.sass
@@ -18,13 +18,13 @@ section#rules
       .title
         color: #6f7172
         font-size: 18px
-        margin-bottom: 10px
       a
         display: inline-block
         width: 22%
         vertical-align: middle
         position: relative
         padding-left: 30px
+        margin-top: 20px
         &:before
           position: absolute
           top: 0
